--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "@google/generative-ai": "^0.24.1",
+    "@vercel/node": "^5.6.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0"
